@@ -153,6 +153,7 @@ it in <tt class="docutils literal"><span class="pre">__password__</span></tt>.</
 <h2><a class="toc-backref" href="#id10" name="special-variables">Special variables</a></h2>
 <p><strong>__input__</strong> -- result of last <strong>getinput</strong></p>
 <p><strong>__password__</strong> -- result of last <strong>getpassword</strong></p>
+<p><strong>__url__</strong> -- current URL</p>
 </div>
 </div>
 <div class="section" id="requirements-availability-and-licensing">
@@ -276,15 +277,18 @@ whatever.)</li>
 <li>formfile &lt;formspec&gt; &lt;fieldspec&gt; &lt;filename&gt;</li>
 <li>twill-sh -i as in python -i</li>
 <li>twill-sh silence</li>
-<li>__url__</li>
 <li>submit on forms w/o submit button? (helgon...)</li>
 <li>execute directories/directory trees?</li>
 <li>switch between executing all files &amp; stopping on first error.</li>
 <li>cookie &quot;1&quot; vs 1, in cookielib.</li>
-<li>'go' for relative URLs; doc until fix.</li>
-<li>fix spaces-in-URLs problem more generally;</li>
 <li>&quot;fv 1 n value&quot; doesn't work, n ==&gt; number does.  ??</li>
 <li>HTTP basic auth</li>
+</ol>
+</blockquote>
+<p>Longer term fixes &amp; cleanups:</p>
+<blockquote>
+<ol class="arabic simple">
+<li>fix spaces-in-URLs problem more generally (in urllib2).</li>
 <li>Paul McGuire's pyparsing suggestions</li>
 </ol>
 </blockquote>
@@ -301,10 +305,9 @@ mechanize.  Michele Simionato is an early adopter who has helped quite
 a bit.  Thanks, guys...</p>
 <p>Bug reports have come in from the following fine people: Chris Miles,
 MATSUNO Tokuhiro, and Elvelind Grandin.</p>
-<p>Patches have been submitted by: Joeri van Ruth.</p>
+<p>Patches have been submitted by: Joeri van Ruth and Paul McGuire.</p>
 <p>This document was written by C. Titus Brown, <a class="reference" href="mailto:titus&#64;caltech.edu">titus&#64;caltech.edu</a>.
-Last updated May '05.
-12.</p>
+Last updated May '05.</p>
 </div>
 </div>
 </body>
